	- Removed many compilation warnings.
	- Fluid now generates code with less compiler warnings (STR #2813).
	- Many CMake improvements and fixes. Note: CMake is mostly operating
	  now, but not yet recommended for production use. Please test and
	  report issues.
	- Updated bundled zlib from 1.2.5 to 1.2.8.
	- Updated bundled libjpeg from jpeg-8c to jpeg-9a.


	Bug fixes

	- Fixed Windows drag'n'drop not showing insert position if the drop
	  target is inside the same window or process (STR #3209).
	- Fixed undefined reference building shared cairo library (STR #3276).
	- Fixed Fl_Browser if text argument to some methods is NULL (STR #3269).
	- Fixed missing image release in fluid (STR #2840).
	- Fixed out-of-bounds memory access in fluid (STR #3263).
	- Fixed trailing white space in fluid .fl files (STR #3239).
	- Several box types were not drawn correctly when deactivated.
	  The background color for deactivated widgets is now correct:
	  fl_inactive(color()) (STR #2907).
	- Fixed Fl_Pixmap (background) drawing to respect the clip region
	  (STR #3206).
	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.
	  Note: if you relied on the faulty behavior you may need to fix
	  your image files.
	- Restored window background drawing, particularly the 'plastic'
	  scheme's background (STR #3059). This was a regression since
	  FLTK 1.3.0.
	- Prevent sending (FL_SHORTCUT) events to inactive widgets (STR #3216).
	- Fixed button label clipping (STR #3237).
	- Fixed Fl_Menu_::item_pathname() handling of descending submenu
	  pointers (STR #3177).
	- Fl_Text_Display: style buffer colors are no longer manipulated by
	  fl_contrast() for normal text drawing (fltk.coredev thread started
	  04/08/15, Subject: "RFC: Fl_Text_Display style buffer color weirdness")
	- Fl_Tree::deactivate() now affects draw color of items (must have
	  ABI 1.3.3 or higher enabled). For icons to draw deactivated,